--- a/src/app/components/topic-dialog/topic-dialog.component.html
+++ b/src/app/components/topic-dialog/topic-dialog.component.html
@@ -13,7 +13,7 @@
 			}
 		</mat-form-field>
 
-		@if (form.value.topic || form.value.notes) {
+		@if (form.value.name || form.value.notes) {
 			<button (click)="onCancelTopicClick()" class="clear-form" mat-button aria-label="Clear topic form" type="button">
 				Clear
 			</button>
