misc minor styling/visual fixes
- Fix confirmation dialog content padding to match header
- Use text button for Add Interaction on all viewport sizes
- Interactions page Group By default changed to 'month'
- Changed how app background color is set
- Datepicker panel matches app theme.
- Fix dialog button font size CSS affecting page header button font size
- Decrease page title font size and weight

--- a/src/app/components/page-header-bar/page-header-bar.component.scss
+++ b/src/app/components/page-header-bar/page-header-bar.component.scss
@@ -25,7 +25,6 @@
 	top: 0;
 	display: flex;
 	align-items: center;
-	gap: 8px;
 	width: 100%;
 	height: var(--header-row-height);
 	max-width: var(--max-page-width);
@@ -58,6 +57,7 @@
 h1 {
 	flex: 1;
 	color: var(--secondary-title-color);
+	font-weight: normal;
 	text-align: start;
 	margin: 0;
 }
