--- a/src/app/components/relationship-dialog/relationship-dialog.component.html
+++ b/src/app/components/relationship-dialog/relationship-dialog.component.html
@@ -44,12 +44,7 @@
 	<section class="interactions" aria-labelledby="interactions-title">
 		<h2 id="interactions-title">
 			Interactions
-			<button (click)="onAddInteractionClick()" class="add-interaction-mobile" mat-icon-button aria-label="Add interaction">
-				<mat-icon>add</mat-icon>
-			</button>
-			<button (click)="onAddInteractionClick()" class="add-interaction-desktop" mat-button>
-				Add Interaction
-			</button>
+			<button (click)="onAddInteractionClick()" mat-button>Add Interaction</button>
 		</h2>
 
 			<p>
