--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -33,11 +33,12 @@ $relationships-client-theme: mat.define-theme((
 	// @include mat.system-level-colors($relationships-client-theme);
 	// @include mat.system-level-typography($relationships-client-theme);
 
+	--mat-app-background-color: var(--page-background-color);
+	--mat-datepicker-calendar-container-background-color: var(--card-background);
 	--mat-option-focus-state-layer-color: var(--header-background-color);
 	--mdc-outlined-text-field-container-shape: var(--primary-border-radius);
 	--mdc-dialog-container-color: var(--card-background);
 	--mdc-dialog-subhead-size: 1.5rem;
-	--mdc-text-button-label-text-size: 1.25rem;
 	--mat-form-field-subscript-text-size: 0.8rem;
 	--mat-bottom-sheet-container-background-color: var(--card-background);
 	--mdc-snackbar-container-color: var(--card-background);
@@ -51,6 +52,10 @@ $relationships-client-theme: mat.define-theme((
 		--mat-dialog-with-actions-content-padding: var(--small-dialog-content-padding);
 		--mat-dialog-actions-padding: var(--small-dialog-actions-padding);
 	}
+}
+
+mat-dialog-container.mat-mdc-dialog-container {
+	--mdc-text-button-label-text-size: 1.25rem;
 }
 
 // Comment out the line below if you want to use the pre-defined typography utility classes.
