refactor collapsed card code
- The CardComponent handles collapsed state content internally
  based on whether or not it is representing an interaction or
  a topic.
- Created TopicFormToModelPipe to easily convert form data to
  model data in templates.

--- a/src/app/components/interaction-dialog/interaction-dialog.component.html
+++ b/src/app/components/interaction-dialog/interaction-dialog.component.html
@@ -64,8 +64,7 @@
 			@if (form.controls.topics.length) {
 				@for (topic of form.controls.topics.controls; track topic; let index = $index) {
 					<app-card
-						[collapsed-left-text]="topic.value.name!"
-						[collapsed-right-text]="topic.value.notes | newlinesToBr"
+						[topic]="topic | topicFormToModel"
 						always-show-left-text
 						(edit-topic)="onEditTopicClick(index)"
 						(delete-topic)="onDeleteTopicClick(topic.value.name!, index)"
