fix incorrect reference to topic name form control

--- a/src/app/components/topic-dialog/topic-dialog.component.html
+++ b/src/app/components/topic-dialog/topic-dialog.component.html
@@ -7,7 +7,7 @@
 
 		<mat-form-field class="topic-name" hintLabel="What topic did you discuss?" appearance="outline" floatLabel="auto">
 			<mat-label>Topic</mat-label>
-			<input #topicNameInput matInput formControlName="topic" required>
+			<input #topicNameInput matInput formControlName="name" required>
 			@if (form.hasError('required')) {
 				<mat-error>Topic is required</mat-error>
 			}
