sticky card group headers on small viewports
When user scrolls vertically on small viewports, the
currently expanded card group's header will remain at
the top of the viewport until pushed aside by another
card group's header.

--- a/src/app/components/card-group/card-group.component.html
+++ b/src/app/components/card-group/card-group.component.html
@@ -1,4 +1,4 @@
-<h2 [id]="'card-group-title-' + instanceNumber()" [style.color]="headerColor()">
+<h2 [id]="'card-group-title-' + instanceNumber()" [style.color]="headerColor()" [class.offset-top]="scrollingUp()">
 	<button (click)="onGroupHeaderClick()" [attr.aria-label]="(open() ? 'Collapse' : 'Expand') + ' card'">
 		<span>{{header()}}</span>
 		<span>({{cardCount()}})</span>
