create welcome/intro page that explains this project
- Added app 'logo' to page header bar.
- Page header bar can be configured to not hide when scrolling down.
- Created pageHeaderBarHeight property in ReesponseiveUiService so
  components can easily access the small/large header bar heights
  from CSS custom properties.
- Enabled anchor scrolling for the Welcome page's table of contents links.
- ViewportScroller offset is set dynamically based on viewport size, since
  page header bar height differs. This ensures anchor links scroll the
  correct distance.
- Updated background color for flat material buttons to match theme.

--- a/src/app/components/page-header-bar/page-header-bar.component.html
+++ b/src/app/components/page-header-bar/page-header-bar.component.html
@@ -1,4 +1,9 @@
 <div class="contents" [style.justify-content]="justifyContent()">
+	@if (!isDialog()) {
+		<a class="home" routerLink="/welcome" mat-icon-button aria-label="Go to home page">
+			<mat-icon class="logo">partner_exchange</mat-icon>
+		</a>
+	}
 	@if (title()) {
 		<h1>{{title()}}</h1>
 	}
