--- a/src/app/components/page-header-bar/page-header-bar.component.scss
+++ b/src/app/components/page-header-bar/page-header-bar.component.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/variables.scss';
+@import '../../../styles/icons.scss';
 
 :host {
 	--header-row-height: var(--page-small-header-bar-height);
@@ -35,6 +36,21 @@
 	transition: top 0.5s;
 	@media screen and (min-width: $small-breakpoint) {
 		gap: 24px;
+	}
+}
+
+a.home {
+	position: relative;
+	top: -1px;
+	margin-right: 2px;
+	@media screen and (min-width: $small-breakpoint) {
+		top: 4px;
+		width: 64px;
+		height: 64px;
+		margin-right: -18px;
+		.logo {
+			@include icon-size(38px);
+		}
 	}
 }
 
