--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,10 @@
 	 box-sizing: border-box;
 }
 
+:root {
+	scroll-behavior: smooth;
+}
+
 // CSS custom properties
 :root {
 	--max-page-width: 1200px;
