topic notes open in dialog on large viewports
Topic notes still open in bottom sheet on small viewports.

--- a/src/app/components/interaction-card-content/interaction-card-content.component.html
+++ b/src/app/components/interaction-card-content/interaction-card-content.component.html
@@ -18,8 +18,18 @@
 	}
 </ng-template>
 
-<ng-template #topicNotes>
+<ng-template #topicNotesSheet>
 	<h3>{{selectedTopic()?.name}}</h3>
 	<p [innerHTML]="selectedTopic()?.notes | newlinesToBr"></p>
 	<button (click)="onCloseTopicClick()" class="close-topic" mat-icon-button><mat-icon>close</mat-icon></button>
+</ng-template>
+
+<ng-template #topicNotesDialog>
+	<h2 mat-dialog-title>Topic: {{selectedTopic()?.name}}</h2>
+	<mat-dialog-content>
+		<p [innerHTML]="selectedTopic()?.notes | newlinesToBr"></p>
+	</mat-dialog-content>
+	<mat-dialog-actions>
+		<button mat-button [mat-dialog-close]="false">Okay</button>
+	</mat-dialog-actions>
 </ng-template>
