--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,3 +1,9 @@
+@mixin flex-center() {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 @mixin limit-lines($number-of-lines) {
 	display: -webkit-box;
 	-webkit-box-orient: vertical;
