refactor/optimize/add to HorizontalScrollButtonsComponent
- use parent element as the scrollable element by default
- refactor/simplify horizontal scrollability logic
- use sticky positioning for scroll buttons to simplify positioning
- In ResponsiveUiService:
  - add function to create new ResizeObservers and convert them to observables
- in ScrollService:
  - simplify logic determining whether an element can be scrolled horizontally
  - fix scroll buttons not always disappearing when they’re supposed to by
    accounting for button width when calculating canScrollRight
  - fix unneeded scroll buttons appearing due to not accounting for resize affecting scrollability
  - move element.scrollBy logic to ScrollService

--- a/src/app/components/horizontal-scroll-buttons/horizontal-scroll-buttons.component.scss
+++ b/src/app/components/horizontal-scroll-buttons/horizontal-scroll-buttons.component.scss
@@ -1,18 +1,18 @@
 button.scroll {
-	position: absolute;
-	// top, bottom, left, and right are set in the template
+	position: sticky;
 
-	display: flex;
+	display: inline-flex;
 	align-items: center;
 	justify-content: center;
 	width: 20px;
+	height: 100%;
 
 	background: rgba(60, 131, 246, 0.251);
 	color: var(--mdc-outlined-button-label-text-color);
 	padding: 0;
 	border: none;
 	cursor: pointer;
-	z-index: 1;
+	z-index: 2;
 
 	&.left {
 		left: 0;
