--- a/src/app/components/horizontal-scroll-buttons/horizontal-scroll-buttons.component.html
+++ b/src/app/components/horizontal-scroll-buttons/horizontal-scroll-buttons.component.html
@@ -1,30 +1,26 @@
-<ng-template #buttons>
+<ng-template #leftButton>
 	<button
 		(click)="onScrollButtonClick('left')"
 		class="scroll left"
-		[class.hidden]="hideLeftScrollButton()"
+		[class.hidden]="!canScrollLeft()"
 		[class.no-opacity]="noOpacity()"
 		matTooltip="Scroll left"
 		matTooltipPosition="right"
 		aria-label="Scroll group left"
-		[style.top.px]="buttonTopPx()"
-		[style.left.px]="buttonXPx()"
-		[style.bottom.px]="buttonBottomPx()"
 	>
 		<mat-icon>chevron_left</mat-icon>
 	</button>
+</ng-template>
 
+<ng-template #rightButton>
 	<button
 		(click)="onScrollButtonClick('right')"
 		class="scroll right"
-		[class.hidden]="hideRightScrollButton()"
+		[class.hidden]="!canScrollRight()"
 		[class.no-opacity]="noOpacity()"
 		matTooltip="Scroll right"
 		matTooltipPosition="left"
 		aria-label="Scroll group right"
-		[style.top.px]="buttonTopPx()"
-		[style.right.px]="buttonXPx()"
-		[style.bottom.px]="buttonBottomPx()"
 	>
 		<mat-icon>chevron_right</mat-icon>
 	</button>
