--- a/src/app/components/interaction-card-content/interaction-card-content.component.html
+++ b/src/app/components/interaction-card-content/interaction-card-content.component.html
@@ -8,28 +8,7 @@
 	@if (interaction().topics.length) {
 		<div class="topics">
 			<div class="topics-title">Topics Discussed</div>
-			<div class="topic-buttons" #topics>
-				@for (topic of interaction().topics; track topic.name) {
-					<button class="topic" (click)="onTopicClick(topic)" mat-stroked-button>{{topic.name}}</button>
-				}
-			</div>
-			<app-horizontal-scroll-buttons [scrollableElement]="topics" [scroll-amount-px]="200" [button-top-px]="19" [button-x-px]="-12" [button-bottom-px]="-19" no-opacity />
+			<app-topic-buttons [topics]="interaction().topics" />
 		</div>
 	}
-</ng-template>
-
-<ng-template #topicNotesSheet>
-	<h3>{{selectedTopic()?.name}}</h3>
-	<p [innerHTML]="selectedTopic()?.notes | newlinesToBr"></p>
-	<button (click)="onCloseTopicClick()" class="close-topic" mat-icon-button><mat-icon>close</mat-icon></button>
-</ng-template>
-
-<ng-template #topicNotesDialog>
-	<h2 mat-dialog-title>Topic: {{selectedTopic()?.name}}</h2>
-	<mat-dialog-content>
-		<p [innerHTML]="selectedTopic()?.notes | newlinesToBr"></p>
-	</mat-dialog-content>
-	<mat-dialog-actions>
-		<button mat-button [mat-dialog-close]="false">Okay</button>
-	</mat-dialog-actions>
 </ng-template>
