--- a/src/app/components/interaction-card-content/interaction-card-content.component.scss
+++ b/src/app/components/interaction-card-content/interaction-card-content.component.scss
@@ -11,42 +11,14 @@
 }
 
 .topics-title {
-	position: relative;
-	left: -12px;
-	width: calc(100% + 24px);
 	height: min-content;
 	background: var(--header-hover-color);
 	text-align: center;
-	margin-bottom: 16px;
 }
 
-.topic-buttons {
-	white-space: nowrap;
-	overflow-x: auto;
-	overflow-y: hidden;
-	margin-top: 16px;
-}
-
-button.topic {
-	--mdc-outlined-button-container-height: 1.5rem;
-	--mdc-outlined-button-label-text-size: 1rem;
-	--mat-outlined-button-horizontal-padding: 8px;
-	--mdc-outlined-button-container-shape: 24px;
-	--mdc-outlined-button-outline-color: var(--mdc-outlined-button-label-text-color);
-	--mat-outlined-button-hover-state-layer-opacity: 0.25;
-	&:not(:first-child) {
-		margin-left: 12px;
-	}
-}
-
-// global style
-::ng-deep .topic-bottom-sheet {
+.topics-title,
+app-topic-buttons {
 	position: relative;
-	min-height: 300px;
-}
-
-button.close-topic {
-	position: absolute;
-	top: 18px;
-	right: 16px;
+	left: -12px;
+	width: calc(100% + 24px);
 }
